<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_tweet_label"
        android:id="@+id/btnCancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCount"
        android:layout_toRightOf="@+id/btnCancel"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_toLeftOf="@+id/btnTweet"
        android:layout_toStartOf="@+id/btnTweet"
        android:layout_alignBottom="@+id/btnCancel"
        android:gravity="center_vertical|right"
        android:text="@string/max_tweet_length" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_tweet_label"
        android:id="@+id/btnTweet"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/tvCount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTweet"
        android:layout_below="@+id/btnCancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minHeight="100dp"
        android:hint="@string/compose_hint" />

</RelativeLayout>