<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/crowd"
        android:id="@+id/ivCrowd"
        android:contentDescription="@string/crowd_description"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ivDimmer"
        android:contentDescription="@string/dimmer_description"
        android:src="@color/theme_dimmer"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:padding="@dimen/login_layout_padding"
        android:background="@android:color/white">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:textColor="@android:color/white"
            android:text="@string/login_label"
            android:id="@+id/btnLogin"
            android:paddingLeft="@dimen/activity_base_margin"
            android:paddingRight="@dimen/activity_base_margin"
            android:textSize="@dimen/login_button_text_size"
            android:textAllCaps="false"
            android:layout_gravity="center" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/login_layout_text_padding"
        android:paddingLeft="@dimen/login_layout_text_padding"
        android:paddingStart="@dimen/login_layout_text_padding"
        android:paddingEnd="@dimen/login_layout_text_padding"
        android:layout_gravity="start|top"
        android:id="@+id/llLabels">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_major_label_text_size"
            android:text="@string/tutorial_hello"
            android:id="@+id/tvHello" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/login_minor_label_text_size"
            android:text="@string/tutorial_welcome"
            android:id="@+id/tvWelcome" />
    </LinearLayout>

</FrameLayout>