<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_base_margin">

    <ImageView
        android:layout_width="@dimen/item_tweet_retweet_size"
        android:layout_height="@dimen/item_tweet_retweet_size"
        android:id="@+id/ivRetweetIcon"
        android:contentDescription="@string/retweet_description"
        android:src="@drawable/ic_retweet"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/ivImage"
        android:layout_alignEnd="@id/ivImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRetweet"
        android:text="@string/hello_world"
        android:textColor="@color/theme_text_detail"
        android:layout_alignStart="@id/tvUsername"
        android:layout_alignLeft="@id/tvUsername"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivImage"
        android:contentDescription="@string/profile_description"
        android:layout_below="@id/ivRetweetIcon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:minWidth="@dimen/profile_image_view_length"
        android:minHeight="@dimen/profile_image_view_length"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_base_margin"
        android:layout_marginStart="@dimen/activity_base_margin"
        android:text="@string/hello_world"
        android:id="@+id/tvUsername"
        android:layout_alignTop="@id/ivImage"
        android:lines="1"
        android:layout_toRightOf="@id/ivImage"
        android:layout_toEndOf="@id/ivImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:lines="1"
        android:id="@+id/tvScreenname"
        android:layout_alignLeft="@id/tvUsername"
        android:layout_alignStart="@id/tvUsername"
        android:layout_toRightOf="@id/ivImage"
        android:layout_toEndOf="@id/ivImage"
        android:layout_below="@+id/tvUsername"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textColor="@color/theme_text_primary"
        android:id="@+id/tvTweet"
        android:autoLink="all"
        android:paddingTop="@dimen/activity_base_margin"
        android:paddingBottom="@dimen/activity_base_margin"
        android:textSize="22sp"
        android:layout_below="@+id/ivImage"
        android:layout_alignStart="@id/ivImage"
        android:layout_alignLeft="@id/ivImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivMedia"
        android:adjustViewBounds="true"
        android:contentDescription="@string/twitter_media_description"
        android:scaleType="fitXY"
        android:layout_alignLeft="@id/tvTweet"
        android:layout_alignStart="@id/tvTweet"
        android:layout_below="@+id/tvTweet"
        android:layout_alignRight="@+id/tvTweet"
        android:layout_alignEnd="@+id/tvTweet"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/tvTimestamp"
        android:textColor="@color/theme_text_detail"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@id/tvTweet"
        android:layout_alignStart="@id/tvTweet"
        android:layout_below="@+id/ivMedia"
        android:layout_alignRight="@+id/tvTweet"
        android:layout_alignEnd="@+id/tvTweet" />

</RelativeLayout>